Split production and debug coordination clients (#5718)
